static,tests: fix build context style
The rendered for label of the build context dropdown
overlapped with the documentation title on smaller
viewport sizes. This change hides the label below
480px and removes the custom padding on the dropdown.

Reviewed-on: https://go-review.googlesource.com/c/pkgsite/+/341113
Trust: Jamal Carvalho <jamal@golang.org>
Run-TryBot: Jamal Carvalho <jamal@golang.org>
TryBot-Result: kokoro <noreply+kokoro@google.com>

--- a/static/frontend/unit/main/_build-context.css
+++ b/static/frontend/unit/main/_build-context.css
@@ -17,16 +17,22 @@
   color: var(--color-text-subtle);
   margin-left: 0.25rem;
   min-width: 6rem;
-  padding: 0.25rem 0.125rem;
 }
 .UnitBuildContext-titleContext option {
   color: var(--color-text-subtle);
+}
+.UnitBuildContext-link {
+  display: none;
+}
+@media only screen and (min-width: 30rem) {
+  .UnitBuildContext-link {
+    display: initial;
+  }
 }
 
 .UnitDoc .UnitBuildContext-titleContext {
   position: relative;
 }
-
 .UnitDoc .UnitBuildContext-titleContext label,
 .UnitDoc .UnitBuildContext-singleContext {
   bottom: 0.875rem;
